# JobRunner

./: .gitignore  Dockerfile  Makefile  README.md  RELEASE_NOTES.md  jobrunner.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.sh  run2.sh  run_tests.sh  version.py
.github/workflows/: codeql.yml  manual-build.yml  pr_build.yml  release-main.yml  test.yml
JobRunner/: Callback.py  CatalogCache.py  DockerRunner.py  JobRunner.py  MethodRunner.py  ShifterRunner.py  SpecialRunner.py  callback_server.py  config.py  logger.py  mock_ee2.py  provenance.py
clients/: NarrativeJobServiceClient.py
scripts/: callback.py  jobrunner.py  monitor_jobrunner_logs.py  slurm_checkjob  slurm_submit
test/: README.md  __init__.py  conftest.py  mock_data.py  prov.json  test_Callback.py  test_callback_server.py  test_callback_server_integration.py  test_catalogcache.py  test_dockerrunner.py  test_functions.py  test_jobrunner.py  test_methodrunner.py  test_module_Callback.py  test_shifter.py  test_specialrunner.py  xtest_callback_server.py
test/mock-server/services/auth/api/legacy/KBase/Sessions/Login/: POST_200.json
test/mock-server/services/catalog/: POST_200.json
test/mock_data/: job.py
test/other_tests/: setup_test_jobrunner_with_cassettes.py  test.env  test_jobrunner_with_cassettes.py
test/other_tests/cassettes/: check_job_canceled.yaml  get_job_params.yaml  version.yaml
