[project]
name = "jobrunner"
version = "0.1.0"
description = "The EE2 JobRunner for kB_SDK apps."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "docker==7.0.0",
    "requests==2.31.0",
    "sanic==21.12.2",
    "uvloop==0.19.0",
    "websocket-client==1.7.0",
    "websockets==10.0",
]

[dependency-groups]
dev = [
    "aiohttp==3.9.1",
    "ipython>=8.18.1",
    "pytest==8.4.2",
    "pytest-cov==6.2.1",
    "sanic-testing==0.8.3",
]
